# accelerometer_demo

./: .gitignore  README.md  client_test.py  my_server.py  pyproject.toml
app/: accelerometer_test.apk
src/: my_server.py
viegas_example/TCP_viegas/: clienteTCP.py  servidorTCP.py
viegas_example/UDP_viegas/: clienteUDP.py  servidorUDP.py
